--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
-pysnmp >='4.2.5'
-pysnmp-apps
-pysnmp-mibs
-Sphinx
-tabulate
-sqlalchemy
+Jinja2==2.7.3
+MarkupSafe==0.23
+Pygments==1.6
+SQLAlchemy==0.9.7
+Sphinx==1.2.3
+argparse==1.2.1
+docutils==0.12
+pyasn1==0.1.7
+pycrypto==2.6.1
+pysnmp==4.2.5
+pysnmp-apps==0.3.4
+pysnmp-mibs==0.1.4
+tabulate==0.7.3
+wsgiref==0.1.2
